--- a/render.yaml
+++ b/render.yaml
@@ -9,9 +9,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        fromDatabase:
-          name: twilight-db
-          column: connectionString
+        sync: false # Set this to your Supabase Transaction Pooler URL in Render dashboard
       - key: SUPABASE_URL
         sync: false
       - key: SUPABASE_ANON_KEY
@@ -20,9 +18,3 @@ services:
         generateValue: true
       - key: PORT
         value: 5000
-
-databases:
-  - name: twilight-db
-    plan: free
-    databaseName: twilight
-    user: twilight_user
