--- a/package.json
+++ b/package.json
@@ -93,7 +93,10 @@
     "zod": "^3.25.76",
     "zod-validation-error": "^3.4.0",
     "zustand": "^5.0.10",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "vite": "^7.1.9",
+    "esbuild": "^0.25.0",
+    "@tailwindcss/vite": "^4.1.14"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.4",
@@ -114,11 +117,9 @@
     "autoprefixer": "^10.4.21",
     "baseline-browser-mapping": "^2.9.15",
     "drizzle-kit": "^0.31.4",
-    "esbuild": "^0.25.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
-    "typescript": "5.6.3",
-    "vite": "^7.1.9"
+    "typescript": "5.6.3"
   },
   "overrides": {
     "d3-selection": "3.0.0",
