--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "setup:supabase": "tsx script/setup-supabase.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -102,7 +103,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "drizzle-kit": "^0.31.4"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.4",
@@ -117,8 +119,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.5.13",
-    "baseline-browser-mapping": "^2.9.15",
-    "drizzle-kit": "^0.31.4"
+    "baseline-browser-mapping": "^2.9.15"
   },
   "overrides": {
     "d3-selection": "3.0.0",
