--- a/package.json
+++ b/package.json
@@ -42,12 +42,16 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.4",
     "@supabase/supabase-js": "^2.90.1",
+    "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.60.5",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@types/dagre": "^0.7.53",
     "@types/leaflet": "^1.9.21",
+    "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.21",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -58,9 +62,11 @@
     "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
+    "esbuild": "^0.25.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "face-api.js": "^0.22.2",
@@ -75,6 +81,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
@@ -86,25 +94,18 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.14",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.4.0",
+    "typescript": "5.6.3",
     "vaul": "^1.1.2",
+    "vite": "^7.1.9",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
     "zod-validation-error": "^3.4.0",
-    "zustand": "^5.0.10",
-    "tsx": "^4.20.5",
-    "vite": "^7.1.9",
-    "esbuild": "^0.25.0",
-    "@tailwindcss/vite": "^4.1.14",
-    "@vitejs/plugin-react": "^5.0.4",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.4",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
-    "typescript": "5.6.3",
-    "drizzle-kit": "^0.31.4"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.4",
