--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "tailwindcss-animate": "^1.0.7",
