--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "setup:supabase": "tsx script/setup-supabase.ts"
+    "setup:supabase": "tsx script/setup-supabase.ts",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -121,7 +122,12 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.5.13",
-    "baseline-browser-mapping": "^2.9.15"
+    "baseline-browser-mapping": "^2.9.15",
+    "eslint": "^9.39.2",
+    "eslint-plugin-jsdoc": "^62.3.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
+    "typescript-eslint": "^8.53.1"
   },
   "overrides": {
     "d3-selection": "3.0.0",
