--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "openai": "^6.16.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
@@ -119,6 +120,7 @@
     "@types/node": "^20.19.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.5.13",
