feat: implement realistic FaceID biometric authentication for kiosks

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ VITE_DATABASE_URL="postgresql://postgres.ksijkdygwhjkfiwkwonh:7WipZEAMU8gwdZlh@a
 SUPABASE_ACCESS_TOKEN="sbp_182a3f6b9dad508cd93076a50091ecc298ba15e1"
 SUPABASE_PROJECT_REF="ksijkdygwhjkfiwkwonh"
 SUPABASE_DB_PASSWORD="7WipZEAMU8gwdZlh"
+SEED=true
