--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "dagre": "^0.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
+    "driver.js": "^1.4.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
