--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/dagre": "^0.7.53",
     "@types/leaflet": "^1.9.21",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vladmandic/face-api": "^1.7.15",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
