--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev:client": "vite dev --host 0.0.0.0 --port 5000",
-    "dev": "set NODE_ENV=development&& tsx server/index.ts",
+    "dev": "set NODE_ENV=development&& tsx watch server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
