--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.60.5",
     "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow-models/qna": "^1.0.2",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@types/dagre": "^0.7.53",
     "@types/leaflet": "^1.9.21",
