--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:client": "vite dev --host 0.0.0.0 --port 5000",
     "dev": "set NODE_ENV=development&& tsx watch server/index.ts",
     "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "setup:supabase": "tsx script/setup-supabase.ts",
