--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@types/dagre": "^0.7.53",
+    "@types/intro.js": "^5.1.5",
     "@types/leaflet": "^1.9.21",
     "@vitejs/plugin-react": "^5.0.4",
     "@vladmandic/face-api": "^1.7.15",
@@ -77,6 +78,7 @@
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.26.2",
     "input-otp": "^1.4.2",
+    "intro.js": "^8.3.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "memorystore": "^1.6.7",
