--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev:client": "vite dev --host 0.0.0.0 --port 5000",
     "dev": "set NODE_ENV=development&& tsx watch server/index.ts",
+    "install:legacy": "npm install --legacy-peer-deps",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
