--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: twilight-ring
     runtime: node
     plan: free
-    buildCommand: npm install && npm run db:push && npm run build
+    buildCommand: npm install --legacy-peer-deps && npm run db:push && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
