--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "set NODE_ENV=development&& tsx watch server/index.ts",
     "install:legacy": "npm install --legacy-peer-deps",
     "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "set NODE_ENV=production&& node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "setup:supabase": "tsx script/setup-supabase.ts",
