--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/dagre": "^0.7.53",
     "@types/intro.js": "^5.1.5",
     "@types/leaflet": "^1.9.21",
+    "@types/react-signature-canvas": "^1.0.7",
     "@vitejs/plugin-react": "^5.0.4",
     "@vladmandic/face-api": "^1.7.15",
     "autoprefixer": "^10.4.21",
@@ -97,6 +98,7 @@
     "react-hook-form": "^7.66.0",
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.9",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-webcam": "^7.2.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
