--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.4",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.60.5",
@@ -52,6 +53,7 @@
     "@tensorflow-models/qna": "^1.0.2",
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.22.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/dagre": "^0.7.53",
     "@types/intro.js": "^5.1.5",
     "@types/leaflet": "^1.9.21",
@@ -64,6 +66,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.7",
     "d3-selection": "3.0.0",
     "d3-transition": "3.0.1",
     "dagre": "^0.8.5",
