--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.4",
+    "@sentry/node": "^10.39.0",
+    "@sentry/react": "^10.39.0",
+    "@sentry/vite-plugin": "^4.9.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/vite": "^4.1.14",
