feat: Introduce comprehensive observability with Sentry integration, unified logging, and performance monitoring across the application.

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,23 @@ VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # Sentry (Error Tracking)
+# Backend Sentry DSN
 SENTRY_DSN=your_sentry_backend_dsn
+# Frontend Sentry DSN
 VITE_SENTRY_DSN=your_sentry_frontend_dsn
+# Sentry Environment (development, staging, production)
+SENTRY_ENVIRONMENT=development
+VITE_SENTRY_ENVIRONMENT=development
+# Sentry Release (optional, for tracking versions)
+SENTRY_RELEASE=twilight-ring@1.0.0
+VITE_SENTRY_RELEASE=twilight-ring@1.0.0
+# Sentry Sample Rates (0.0 to 1.0)
+SENTRY_TRACES_SAMPLE_RATE=1.0
+VITE_SENTRY_TRACES_SAMPLE_RATE=1.0
+SENTRY_PROFILES_SAMPLE_RATE=1.0
+# Enable Sentry in development (optional, default: false)
+# SENTRY_ENABLED=true
+# VITE_SENTRY_ENABLED=true
 
 # OpenAI (Optional)
 OPENAI_API_KEY=your_openai_key
