--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "**/*.test.ts"
   ],
   "compilerOptions": {
+    "sourceMap": true,
+    "inlineSources": true,
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
     "noEmit": true,
