--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "set NODE_ENV=development&& tsx watch server/index.ts",
     "install:legacy": "npm install --legacy-peer-deps",
     "build": "tsx script/build.ts",
+    "build:analyze": "npx cross-env ANALYZE=true vite build",
     "start": "set NODE_ENV=production&& node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
@@ -141,10 +142,12 @@
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.5.13",
     "baseline-browser-mapping": "^2.9.15",
+    "cross-env": "^10.1.0",
     "eslint": "^9.39.2",
     "eslint-plugin-jsdoc": "^62.3.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
+    "rollup-plugin-visualizer": "^6.0.5",
     "typescript-eslint": "^8.53.1"
   },
   "overrides": {
