--- a/package.json
+++ b/package.json
@@ -100,9 +100,9 @@
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
-    "react": "^19.2.0",
+    "react": "19.2.0",
     "react-day-picker": "^9.11.1",
-    "react-dom": "^19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
